--- a/src/scss/loggedOut.scss
+++ b/src/scss/loggedOut.scss
@@ -75,3 +75,77 @@
         }
     }
 }
+// Sign Up
+    .SignUp {
+        background-color: #e9ebee;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        height:50vh;
+
+        h1 {
+            color: #333;
+            font-weight: bold;
+            margin-bottom: 25px;
+            margin-top:5px;
+            .freeText {
+                display: block;
+                font-size: 65%;
+                padding-top:5px;
+                font-weight: normal;
+            }
+        }
+
+        .float-right {
+            float: right;
+            width:380px;
+        }
+
+        .form {
+            input {
+                border:1px solid;
+                margin: 5px 0px;
+                border-color: #bdc7d8;
+                border-radius: 5px;
+                font-size: 18px;
+                padding: 8px 10px;
+            }
+            .half-input {
+                width: 172px;
+            }
+            .full-input {
+                width: 377px;
+            }
+            small {
+                display: block;
+                margin: 10px 0px;
+                color: #777;
+                font-size: 11px;
+                width: 316px;
+            }
+            .signUp-btn {
+                font-size: 19px;
+                background: linear-gradient(#67ae55, #578843);
+                background-color: #69a74e;
+                box-shadow: inset 0 1px 1px #000;
+                border-color: #3b6e22 #3b6e22 #2c5115;
+                border: 1px solid;
+                border-radius: 5px;
+                color: #fff;
+                cursor: pointer;
+                display: inline-block;
+                letter-spacing: 1px;
+                position: relative;
+                text-shadow: 0 1px 2px rgba(0,0,0,.5);
+                margin-top: 10px;
+                margin-bottom: 10px;
+                line-height: 126%;
+                min-width: 194px;
+                padding: 7px 20px;
+                text-align: center;
+                font-weight: bold;
+                word-spacing: normal;
+                text-transform: none;
+                text-indent: 0px;
+            }
+        }
+    }
