--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,7 @@
 @import 'typography';
 @import 'grid';
 @import 'header';
+@import 'footer';
 @import 'feed';
 @import 'login';
 @import 'loggedOut';
