--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -18,3 +18,12 @@
 .mt-0 {
     margin-top: 0px !important;
 }
+.float-right {
+    float: right !important;
+}
+.float-left {
+    float: left !important;
+}
+.opacity-low {
+    opacity: .6 !important;
+}
