--- a/src/scss/loggedOut.scss
+++ b/src/scss/loggedOut.scss
@@ -80,7 +80,7 @@
         background-color: #e9ebee;
         padding-bottom: 20px;
         padding-top: 20px;
-        height:50vh;
+        height:400px;
 
         h1 {
             color: #333;
