--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -158,6 +158,11 @@
         }
         img {
             border-radius: 50%;
+            width: 20px;
+            display: inline;
+            vertical-align: middle;
+            height: 20px;
+            margin-right: 5px;
         }
     }
 }
