--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -1,3 +1,4 @@
+body {background: #e9ebee;}
 .globalContainer {
     margin: 0 auto;
     position: relative;
@@ -26,4 +27,8 @@
 }
 .opacity-low {
     opacity: .6 !important;
+}
+.clearfix-t {
+    margin-top:12px;
+    vertical-align: top;
 }
