--- a/src/scss/user.scss
+++ b/src/scss/user.scss
@@ -1,3 +1,24 @@
+.userIcon {
+    background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yb/r/mHnF93h6wRO.png');
+    background-size: 33px 367px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+}
+
+.userIcon_2 {
+    background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/YeZa4uQaIIR.png');
+    background-size: 33px 847px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+
+    &.edit { background-position: 0 -456px;     padding-bottom: 1px; }
+}
+
 .UserHead {
   display: flex;
   padding: 5px;
@@ -137,6 +158,43 @@ User page grid
         text-rendering: optimizelegibility;
         text-shadow: 0 0 3px rgba(0, 0, 0, .8);
     }
+    ._actionBar {
+        bottom: 15px;
+        padding: 0;
+        position: absolute;
+        right: 15px;
+        float: right;
+        max-width: 400px;
+
+        a {
+            margin-left: 12px;  
+            background-clip: padding-box;
+            border-color: rgba(0, 0, 0, .4);
+            margin-top: 12px;
+            cursor: pointer;
+            display: inline-block;
+            text-decoration: none;
+            white-space: nowrap;
+            line-height: 26px;
+            padding: 0 10px;
+            background-color: #f5f6f7;
+            border-color: #ccd0d5;
+            color: #4b4f56;
+            border: 1px solid;
+            border-radius: 2px;
+            box-sizing: content-box;
+            font-size: 12px;
+            -webkit-font-smoothing: antialiased;
+            font-weight: bold;
+            justify-content: center;
+            padding: 0 8px;
+            position: relative;
+            text-align: center;
+            text-shadow: none;
+            vertical-align: middle;
+            bottom: 40px;
+        }
+    }
 }
 
 .coverHeaderContainer {
@@ -149,6 +207,7 @@ User page grid
     position: relative;
     width: 100%;
     z-index: 4;
+    background: #fff;
 
     .actionsCoverPic {
         bottom: 15px;
@@ -204,6 +263,47 @@ User page grid
                 font-size: 11px;
                 font-weight: normal;
                 padding-left: 6px;
+            }
+        }
+    }
+}
+
+.userDetails {
+    border: 1px solid #dddfe2;
+    border-radius: 3px;
+    background-color: #fff;
+    padding: 12px;
+    width: 320px;
+    margin-right: 20px;
+    display: inline-block;
+
+    .title {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .body {
+        border-top: 1px solid #ebedf0;
+        margin-bottom: 8px;
+        margin-top: 4px;
+
+        ul {
+            list-style-type: none;
+            padding:0;
+
+            li {
+                font-size: 12px;
+                line-height: 16px;
+                margin:5px 0px 10px 0px;
+
+                i {
+                    margin-right: 7px;
+                    vertical-align: bottom;
+                    &.rss {background-position: 0 -214px;}
+                    &.job {background-position: 0 -180px;}
+                    &.clock {background-position: 0 -197px;}
+                    &.home {background-position: 0 -248px;}
+                }
             }
         }
     }
