--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,6 +14,7 @@
         border-radius: 3px;
         box-shadow: 0 3px 8px rgba(0, 0, 0, .3);
         border-radius: 3px;
+        max-height: calc(100vh - 96px) !important;
 
         ul {
             padding: 5px 0;
