--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -1,3 +1,18 @@
+.postsIcon {
+    background-image: url("https://static.xx.fbcdn.net/rsrc.php/v3/yp/r/BXQwKA9jtrb.png");
+    background-repeat: no-repeat;
+    background-size: 97px 1168px;
+    
+    &.like { 
+        background-position: -49px -1069px; 
+        width:16px; 
+        height:16px;
+        display: inline-block;
+        vertical-align: text-bottom;
+        margin-right: 5px;
+     }
+}
+
 .fbTimelineComposerUnit {
         border: 1px solid #dddfe2;
         border-radius: 3px;
@@ -105,6 +120,7 @@
                 }
 
                 .btn {
+                    max-width: 130px;
                     height: 32px;
                     font-size: 13px;
                     line-height: 30px;
@@ -160,4 +176,53 @@
     padding: 12px 12px 0;
     border: 1px solid #dddfe2;
     border-radius: 3px;
+
+    .body {
+        border-bottom: 1px solid #dadde1;
+        padding-bottom: 12px;
+        margin-top: 6px;
+    }
+
+    ._link {
+        cursor: pointer;
+    }
+
+    ._soc {
+        font-size: 13px;
+        line-height: 20px;
+        align-items: center;
+        border-bottom: 1px solid #dadde1;
+        color: #606770;
+        display: flex;
+        padding: 5px 0 5px 0;
+        display: inline-block;
+        width:100%;
+
+        ._l {
+            float:left;
+            margin-right: 5px;
+        }
+
+        ._c {
+            float:right;
+        }
+    }
+}
+
+._comment_t {
+    font-size: 13px;
+    line-height: 16px;
+    color: #000;
+    padding: 8px 10px;
+    background:#f2f3f5;
+    border-radius: 18px;
+    line-height: 16px;
+    margin: 0;
+    max-width: 100%;
+    word-wrap: break-word;
+    position: relative;
+    white-space: normal;
+    word-break: break-word;
+    margin-left: 50px;
+    margin-right: 10px;
 }
