--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -13,10 +13,20 @@
      }
 }
 
+.userIcon_3 {
+    background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yP/r/IZFSOi34yXv.png');
+    background-repeat: no-repeat;
+    background-size: 140px 836px;
+    height: 20px;
+    width: 20px;
+
+    &.dots { background-position: -105px -581px; }
+}
+
 .fbTimelineComposerUnit {
         border: 1px solid #dddfe2;
         border-radius: 3px;
-        width: 530px;
+        width: 100%;
         display: inline-block;
         background: #fff;
 
@@ -232,4 +242,29 @@
     word-break: break-word;
     margin-left: 50px;
     margin-right: 10px;
+}
+
+.comment {
+    padding-top: 10px;
+
+    ._comment_input {
+        background-color: #f2f3f5;
+        border: 1px solid #ccd0d5;
+        border-radius: 16px;
+        display: flex;
+        justify-content: flex-end;
+        cursor: text;
+        flex: 1 1 auto;
+        line-height: 16px;
+        font-size:13px;
+        width: 96%;
+        overflow: hidden;
+        padding: 8px 12px;
+        color: #646464;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    button {
+        visibility:hidden;
+    }
 }
