--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -13,3 +13,7 @@ a, a:link, ._linker {
 }
 
 .pointer {cursor:pointer;}
+.t_sm {font-size:75%;}
+.mar_lr {margin:0px 15px;}
+.muted { color: #90949c; }
+.ver_top {vertical-align:top;}
