--- a/src/scss/user.scss
+++ b/src/scss/user.scss
@@ -1,5 +1,5 @@
 .userIcon {
-    background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yb/r/mHnF93h6wRO.png');
+    background-image: url('../Images/userICO2.png');
     background-size: 33px 367px;
     background-repeat: no-repeat;
     display: inline-block;
@@ -8,7 +8,7 @@
 }
 
 .userIcon_2 {
-    background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/YeZa4uQaIIR.png');
+    background-image: url('../Images/userICO.png');
     background-size: 33px 847px;
     background-repeat: no-repeat;
     display: inline-block;
@@ -18,6 +18,78 @@
 
     &.edit { background-position: 0 -456px;     padding-bottom: 1px; }
     &.fb { background-position: 0 -558px;     padding-bottom: 1px; }
+    &.camera {
+        width: 26px;
+        height: 21px;
+        background-position: 0 -33px;
+        bottom: 4px;
+        cursor: pointer;
+        display: inline-block;
+        position: absolute;
+
+        span {
+            color: $typo-color-d-light;
+            margin-left:10px;
+            margin-left: 30px;
+            font-size: $font-d-12;
+            text-decoration: none;
+            font-style: normal;
+            font-weight: 800;
+        }
+    }
+}
+
+.userIcon_4 {
+    background-image: url('..//Images/userICO3.png');
+    background-size: 121px 158px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+
+    &.edit { background-position: -68px -141px; }
+    &.info { background-position: -34px -141px; }
+    &.work { background-position: 0 -141px; }
+    &.info { background-position: -34px -141px; }
+    &.about { background-position: -51px -141px; }
+    &.home { background-position: 0 -127px; }
+    &.owl {
+        width: 120px;
+        height: 115px;
+        background-position: 0 0;
+        margin-top: 16px;
+        margin-left: 20px;
+        margin-right: 20px;
+        float:left;
+    }
+}
+
+.userIcon_5 {
+    background-image: url('..//Images/userICO4.png');
+    background-size: 286px 4713px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+
+    &.edit { background-position: -221px -2051px; }
+}
+
+.userIcon_6 {
+    background-image: url('..//Images/userICO5.png');
+    background-size: 25px 204px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+
+    &.home { background-position: 0 -127px; }
+    &.bday { background-position: 0 -42px; }
+    &.mail { background-position: 0 -59px; }
+    &.pwd { background-position: 0 -93px; }
 }
 
 .UserHead {
@@ -338,6 +410,100 @@ User page grid
             right: 0;
             font-size: 12px;
             line-height: 16px;
+        }
+    }
+}
+
+.userEditProfileComp {
+    .dialog {
+        background-color: #fff;
+        border-radius: 3px;
+        box-shadow: 0 2px 26px rgba(0, 0, 0, .3), 0 0 0 1px rgba(0, 0, 0, .1);
+        font-family: Helvetica, Arial, sans-serif;
+        margin: 0 auto 40px;
+        position: relative;
+        width: 650px;
+        margin-top: 40px;
+
+        .t1 {
+            background-color: #f5f6f7;
+            border-bottom: 1px solid #e5e5e5;
+            border-radius: 3px 3px 0 0;
+            color: #1d2129;
+            font-weight: bold;
+            line-height: 19px;
+            padding: 10px 12px;
+        }
+
+        .i-con-images {
+            position: relative;
+            height: 280px;
+            width: 650px;
+            overflow: hidden;
+        }
+
+        .i1 {
+            bottom: 10px;
+            cursor: pointer;
+            display: inline-block;
+            position: absolute;
+            left: 10px;
+            position: absolute;
+            img {
+                border-radius: 50%;
+                background: rgba(0, 0, 0, .15);
+                padding: 1px;
+                width:134px;
+                height:134px;
+            }
+            input[type='file'] {
+                opacity: 0;
+                z-index: 1000;
+                position: absolute;
+                bottom: 5px;
+            }
+        }
+
+        input[type='file'] {
+            opacity: 0;
+            z-index: 1000;
+            position: absolute;
+            top: 10px;
+        }
+
+        .t-bg {
+            background-color: #f5f6f7;
+            border: 1px solid #dddfe2;
+            border-radius: 0;
+            line-height: 26px;
+            padding-left: 8px;
+            padding-right: 8px;
+            padding-bottom: 12px;
+            padding-top: 12px;
+        }
+
+        .t-bg-edit {
+            background: #444950;
+            color: #fff;
+            position: relative;
+
+            span {
+                position: absolute;
+                top: 35px;
+                right: 55px;
+            }
+        }
+
+        .txt-full {width:100%;}
+        .txtArea {
+            border: none;
+            background-color: #fff;
+            color: #1c1e21;
+            display: block;
+            resize: none;
+            text-align: center;
+            width: 99%;
+            font-size: 12px;
         }
     }
 }
