--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -14,6 +14,7 @@ a, a:link, ._linker {
 
 .pointer {cursor:pointer;}
 .t_sm {font-size:75%;}
+.f-13 {font-size:13px;}
 .mar_lr {margin:0px 15px;}
 .muted { color: #90949c; }
 .ver_top {vertical-align:top;}
