--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -22,6 +22,9 @@ body {background: #e9ebee; }
 .mt-0 {
     margin-top: 0px !important;
 }
+.mr-10 {
+    margin-right: 10px !important;
+}
 .float-right {
     float: right !important;
 }
@@ -38,8 +41,23 @@ body {background: #e9ebee; }
 .col-530 {
     width: 530px;
 }
+.col-500 {
+    width: 500px;
+}
 .col-320 {
     width: 320px;
+}
+.col-200 {
+    width: 200px;
+}
+.col-180 {
+    width: 180px;
+}
+.panel {
+    padding: 12px;
+    background-color: #fff;
+    border: 1px solid #dddfe2;
+    border-radius: 3px;
 }
 ._block {
     display:block;
