--- a/client/src/scss/posts.scss
+++ b/client/src/scss/posts.scss
@@ -209,6 +209,10 @@
         cursor: pointer;
     }
 
+    .com_container {
+        margin: 4px 0 9px 0;
+    }
+
     ._soc {
         font-size: 13px;
         line-height: 20px;
