--- a/client/src/scss/grid.scss
+++ b/client/src/scss/grid.scss
@@ -25,6 +25,9 @@ body {background: #e9ebee; }
 .mt-0 {
     margin-top: 0px !important;
 }
+.mr-0 {
+    margin-right: 0px !important;
+}
 .mr-10 {
     margin-right: 10px !important;
 }
