--- a/client/src/scss/user.scss
+++ b/client/src/scss/user.scss
@@ -97,8 +97,8 @@
   padding: 5px;
 
     .Avatar {
-        width:40px;
-        height: 40px;
+        width:35px;
+        height: 35px;
         border-radius: 50%;
         overflow: hidden;
         border: 1px solid rgba(0, 0, 0, .1);
@@ -165,6 +165,8 @@ User Page
             min-width: 100%;
             position: absolute;
             left: 0;
+            max-width: 800px;
+            max-height: 315px;
         }
     }
 
@@ -245,7 +247,7 @@ User page grid
         float: right;
         max-width: 400px;
 
-        a {
+        a, button {
             margin-left: 12px;  
             background-clip: padding-box;
             border-color: rgba(0, 0, 0, .4);
